--- a/markdown_viewer.html
+++ b/markdown_viewer.html
@@ -465,7 +465,7 @@
                 📁 Seleziona File Markdown
             </button>
             <div class="upload-text">
-                Oppure trascina qui il tuo file .md
+                Oppure trascina qui il tuo file .md o .txt
             </div>
         </div>
 
