--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📝 Visualizzatore Markdown</h1>
+            <h1>📝 Editor e Visualizzatore Markdown</h1>
             <p>Carica e visualizza i tuoi file .md con formattazione elegante</p>
         </div>
         
